Wie bint hier op de Nedersaksische Wikipedia, niet op de Nederlaandse

--- a/25_juli.mw
+++ b/25_juli.mw
@@ -5,9 +5,9 @@ De volgende gebeurtenissen vunnen of vienen plaose op '''25 juli'''
 * [[1909]] - [[Louis Blériot]] vlieg as eerste [['t Kenaal]] over. 
 
 == Geboren ==
-* [[1965]] - [[Ina Müller]], Duitse zangeres, grappenmaakster, schrijfster en praat-show presentatrice
-* [[1967]] - [[Paul Groot]], [[Nederland|Nederlandse]] grappenmaker
-* [[1967]] - [[Matt LeBlanc]], [[Verenigde Staten van Amerika|Amerikaanse]] acteur
+* [[1965]] - [[Ina Müller]], Duutse zangeres, grappenmaakster, schriefster en praotshowprissentatrice
+* [[1967]] - [[Paul Groot]], [[Nederlaand|Nederlaanse]] grappenmaker
+* [[1967]] - [[Matt LeBlanc]], [[Verienigde Staoten van Amerika|Amerikaanse]] acteur
 
 == Uut de tied ==
 * [[1472]] - [[Thomas a Kempis]], augustiener kanunnik, schriever, aoverschriever en mysticus
