*Empty MediaWiki Message*

--- a/Rieksweg_28.mw
+++ b/Rieksweg_28.mw
@@ -1,5 +1,5 @@
 [[ofbeelding:Rijksweg28.svg|thumb|Route van de A28 deur Nederlaand]]
-[[ofbeelding:&quot;New&quot; (1974) concrete archbridge in the A28 motorway Zwolle. Just like the Deventer bridge (A1) it has a lot of creepdeflection - panoramio.jpg|thumb|De [[Iesselbrugge]] (Brug Katerveer II) bi'j Zwolle ([[2014]])]]
+[[ofbeelding:"New" (1974) concrete archbridge in the A28 motorway Zwolle. Just like the Deventer bridge (A1) it has a lot of creepdeflection - panoramio.jpg|thumb|De [[Iesselbrugge]] (Brug Katerveer II) bi'j Zwolle ([[2014]])]]
 De '''Rieksweg 28''' ('''A28''') is een [[autosnelweg]] en [[rieksweg]] in [[Nederlaand]] en löp deur de [[Provincie|previncies]] [[Utrecht (provinsie)|Utrecht]], [[Gelderlaand]], [[Oaveriessel]], [[Dreanthe]] en [[Grunnen (provìnzie)|Grönning]]. De A28 begint op de Waterlinieweg en endigt op knooppunt Julianaplein. De snelweg zörgt erveur dät de steden [[Utrecht (stad)|Utrecht]] en [[Grunnen (stad)|Grönning]] met mekaar verbunnen bint, via [[Amersfoort]], [[Zwolle]], [[Ogeveine|Hoogevene]] en [[Assen]].
 
 De A28 is oaver het algemien een noord-zuud-route, määr is ook belangrieke veur verkeer tussen oost en west. De [[E232]] löp oaver bi'jna de hiele A28, määr begint bi'j [[Knooppunt Hoevelaken]] in pläätse van [[Knooppunt Rijnsweerd]] waor de A28 begint. De snelweg is met 187 kilometer (187,471&nbsp;km<ref>actuele weagenlieste januari 2014, Rijkswaterstaat</ref>) ien van de langste snelweagen in Nederlaand. Tussen [[1961]] en [[1986]] is de snelweg lös edaone.
@@ -270,7 +270,7 @@ Het giet hier oaver wärkdag-jaorgemiddeldes, dus het verkeer dät op een gemidd
 |}
 
 == [[Filetop 50]] ==
-Hieronder ku-j de plaatse zien van bepaolde stokken A28 die in de filetop 50 stunden tussen [[1996]] en [[2006]]<ref>1996 Weg Omschrijving Richting Filezwaarte https://docplayer.nl/56920151-1996-weg-omschrijving-richting-filezwaarte.html</ref>. De ciefers bint niet corrigeerd veur veraanderde meetmenieren. Zie bint dus niet ien op ien vergeliekbaor. Deur andere meetmenieren bint niet alle heufdlocaties meer op dezölfde plaatse. Zo kan beveurbield Zwolle-Zuud->Iesselbrugge later as Zwolle-Zuud->Hattemerbroek vermeld wörden. In [[1998]], [[2000]], [[2002]], [[2004]], [[2005]] en [[2006]] bint er meetbreuken ewest. Op [[1 juli]] [[2005]] hef er een slim grote meetbreuk ewest waordeur de [[filedrok]] 25% heuger uutkwamp. Hierdeur wier er een grotere ofstaand töt de kop van de [[file]] emeaten. Ook hebt niet alle wegvakken nog etzölfde wegnommer. Veur de ofzunderlike jaorlikse filetoppen is hierveur corrigeerd, maar dus niet oaver de jaoren hen. Ook de ciefers van de eerste helfte van [[2009]] en [[2012]]-[[2019]] ku-j hier zien.
+Hieronder ku-j de plaatse zien van bepaolde stokken A28 die in de filetop 50 stunden tussen [[1996]] en [[2006]]<ref>1996 Weg Omschrijving Richting Filezwaarte https://docplayer.nl/56920151-1996-weg-omschrijving-richting-filezwaarte.html</ref>. De ciefers bint niet corrigeerd veur veraanderde meetmenieren. Zie bint dus niet ien op ien vergeliekbaor. Deur andere meetmenieren bint niet alle heufdlocaties meer op dezölfde plaatse. Zo kan beveurbield Zwolle-Zuud→Iesselbrugge later as Zwolle-Zuud→Hattemerbroek vermeld wörden. In [[1998]], [[2000]], [[2002]], [[2004]], [[2005]] en [[2006]] bint er meetbreuken ewest. Op [[1 juli]] [[2005]] hef er een slim grote meetbreuk ewest waordeur de [[filedrok]] 25% heuger uutkwamp. Hierdeur wier er een grotere ofstaand töt de kop van de [[file]] emeaten. Ook hebt niet alle wegvakken nog etzölfde wegnommer. Veur de ofzunderlike jaorlikse filetoppen is hierveur corrigeerd, maar dus niet oaver de jaoren hen. Ook de ciefers van de eerste helfte van [[2009]] en [[2012]]-[[2019]] ku-j hier zien.
 {| class="wikitable"
 |+
 !1996
@@ -289,19 +289,19 @@ Hieronder ku-j de plaatse zien van bepaolde stokken A28 die in de filetop 50 stu
 !Plek in Filetop
 !Filedrok (kmmin)
 |-
-|De Uithof->Den Dolder
+|De Uithof→Den Dolder
 |39
 |31152
 |
-|De Uithof->Den Dolder
+|De Uithof→Den Dolder
 |22
 |41070
 |
-|De Uithof->Den Dolder
+|De Uithof→Den Dolder
 |22
 |54558
 |
-|Leusden-Zuud->Leusden
+|Leusden-Zuud→Leusden
 |37
 |50669
 |-
@@ -313,7 +313,7 @@ Hieronder ku-j de plaatse zien van bepaolde stokken A28 die in de filetop 50 stu
 |
 |
 |
-|Leusden-Zuud->Leusden
+|Leusden-Zuud→Leusden
 |40
 |38486
 |
@@ -335,35 +335,35 @@ Hieronder ku-j de plaatse zien van bepaolde stokken A28 die in de filetop 50 stu
 !Plek in Filetop 
 !Filedrok (kmmin)
 |-
-|Leusden-Zuud->Leusden
+|Leusden-Zuud→Leusden
 |20
 |64886
 |
-|Zwolle-Noord->Brugge oaver de Oaveriesselse Vechte (Ommen)
+|Zwolle-Noord→Brugge oaver de Oaveriesselse Vechte (Ommen)
 |13
 |89639
 |
-|Leusden-Zuud->Leusden
+|Leusden-Zuud→Leusden
 |20
 |63514
 |-
-|Zwolle-Noord->Brugge oaver de Oaveriesselse Vechte (Ommen)<ref>Wördt deur NIS Riekswäterstaot filegegevens ok ezeen as Zwolle-Centrum->Zwolle-Noord. Dit giet oaver de jaoren töt 2003.</ref>
+|Zwolle-Noord→Brugge oaver de Oaveriesselse Vechte (Ommen)<ref>Wördt deur NIS Riekswäterstaot filegegevens ok ezeen as Zwolle-Centrum→Zwolle-Noord. Dit giet oaver de jaoren töt 2003.</ref>
 |25
 |57697
 |
-|Zaandbärgen->Den Dolder
+|Zaandbärgen→Den Dolder
 |29
 |59775
 |
-|Zwolle-Noord->Brugge oaver de Oaveriesselse Vechte (Ommen)
+|Zwolle-Noord→Brugge oaver de Oaveriesselse Vechte (Ommen)
 |34
 |50779
 |-
-|De Pan->Zaandbärgen
+|De Pan→Zaandbärgen
 |31
 |52367
 |
-|Leusden-Zuud->Leusden
+|Leusden-Zuud→Leusden
 |35
 |54867
 |
@@ -375,7 +375,7 @@ Hieronder ku-j de plaatse zien van bepaolde stokken A28 die in de filetop 50 stu
 |
 |
 |
-|Dalsen->Haorste (meugelik Ni'jluzen->Ommen of Ommen->Zwolle Noord)
+|Dalsen→Haorste (meugelik Ni'jluzen→Ommen of Ommen→Zwolle Noord)
 |45
 |49257
 |
@@ -397,31 +397,31 @@ Hieronder ku-j de plaatse zien van bepaolde stokken A28 die in de filetop 50 stu
 !Plek in Filetop 
 !Filedrok (kmmin)
 |-
-|Leusden->Amersfoort
+|Leusden→Amersfoort
 |12 (94 in 2002)
 |94328 (188 files)
 |
-|De Pan->Den Dolder (Zeist->Den Dolder)
+|De Pan→Den Dolder (Zeist→Den Dolder)
 |27
 |73392
 |
-|Zeist->Den Dolder
+|Zeist→Den Dolder
 |29
 |68069 (-7%)
 |-
-|Leusden-Zuud->Leusden
+|Leusden-Zuud→Leusden
 |18
 |73950 (211 files)
 |
-|Leusden-Zuud->Leusden
+|Leusden-Zuud→Leusden
 |47
 |54476
 |
-|Leusden-Zuud->Leusden
+|Leusden-Zuud→Leusden
 |38
 |56562 (+4%)
 |-
-|Brugge oaver de Oaveriesselse Vechte->Dalsen (Zwolle-Noord->Ommen)
+|Brugge oaver de Oaveriesselse Vechte→Dalsen (Zwolle-Noord→Ommen)
 |47 (522 in 2002)
 |45669 (84 files)
 |
@@ -442,25 +442,25 @@ Hieronder ku-j de plaatse zien van bepaolde stokken A28 die in de filetop 50 stu
 !Eerste helfte 2009<ref>MIRT 2010</ref>
 !Plek in Filetop
 |-
-|Leusden-Zuud->Leusden
+|Leusden-Zuud→Leusden
 |27
 |106053 (+44%)
 |
-|Leusden-Zuud->Leusden
+|Leusden-Zuud→Leusden
 |16
 |-
-|De Pan->Den Dolder
+|De Pan→Den Dolder
 |36
 |93407 (+6%)
 |
-|Zeist->Den Dolder
+|Zeist→Den Dolder
 |37
 |-
-|Ommen->Ni'jluzen
+|Ommen→Ni'jluzen
 |<50
 |49536
 |
-|Ommen->Ni'jluzen
+|Ommen→Ni'jluzen
 |46
 |}
 {| class="wikitable"
@@ -473,31 +473,31 @@ Hieronder ku-j de plaatse zien van bepaolde stokken A28 die in de filetop 50 stu
 !Plek in Filetop 
 !Filedrok (kmmin)
 |-
-|Hoevelaken->Amersfoort
+|Hoevelaken→Amersfoort
 |12
 |104897
 |
-|Hoevelaken->Amersfoort
+|Hoevelaken→Amersfoort
 |22
 |61419
 |-
-|De Uithof->Den Dolder
+|De Uithof→Den Dolder
 |14
 |99619
 |
-|De Uithof->Rijnsweerd
+|De Uithof→Rijnsweerd
 |23
 |58460
 |-
-|Maarn->Leusden-Zuud
+|Maarn→Leusden-Zuud
 |24
 |66483
 |
-|Maarn->Leusden-Zuud
+|Maarn→Leusden-Zuud
 |28
 |52165
 |-
-|Soesterbärg->Maarn
+|Soesterbärg→Maarn
 |25
 |65277
 |
@@ -505,7 +505,7 @@ Hieronder ku-j de plaatse zien van bepaolde stokken A28 die in de filetop 50 stu
 |
 |
 |-
-|Amersfoort->Leusden
+|Amersfoort→Leusden
 |27
 |63199
 |
@@ -513,7 +513,7 @@ Hieronder ku-j de plaatse zien van bepaolde stokken A28 die in de filetop 50 stu
 |
 |
 |-
-|Leusden-Zuud->Leusden
+|Leusden-Zuud→Leusden
 |30
 |59603
 |
@@ -521,7 +521,7 @@ Hieronder ku-j de plaatse zien van bepaolde stokken A28 die in de filetop 50 stu
 |
 |
 |-
-|Rijnsweerd->Utrecht-Centrum
+|Rijnsweerd→Utrecht-Centrum
 |42
 |44656
 |
@@ -544,15 +544,15 @@ Hieronder ku-j de plaatse zien van bepaolde stokken A28 die in de filetop 50 stu
 !Filedrok (kmmin)
 !
 |-
-|De Uithof->Rijnsweerd
+|De Uithof→Rijnsweerd
 |5
 |101067
 |
-|De Uithof->Rijnsweerd
+|De Uithof→Rijnsweerd
 |4
 |115717
 |
-|De Uithof->Rijnsweerd
+|De Uithof→Rijnsweerd
 |5
 |125994
 |
@@ -571,15 +571,15 @@ Hieronder ku-j de plaatse zien van bepaolde stokken A28 die in de filetop 50 stu
 !Plek in Filetop 
 !Filedrok (kmmin)
 |-
-|De Uithof->Rijnsweerd
+|De Uithof→Rijnsweerd
 |7
 |121707
 |
-|De Uithof->Rijnsweerd
+|De Uithof→Rijnsweerd
 |17
 |93649
 |
-|Utrecht-De Uithof->Rijnsweerd
+|Utrecht-De Uithof→Rijnsweerd
 |27
 |82787
 |}
