--- a/Hoogelaandsters.mw
+++ b/Hoogelaandsters.mw
@@ -57,7 +57,9 @@ t Hoogelaandsters wordt tegenswoordeg proat deur om en bie 55.000 minsken en is 
 
 t Hoogelaandsters wordt over t algemain zain as t maist karakteristieke dialekt van [[Grunnen (provìnzie)|Grunnen]], dat der ien zien beste vörm proat wordt. Dat komt middelkerwies deurdat ien t Hoogelaands de typisch Grunnegse twaiklanken "ai" en "ou" hail veul veurkommen, bieveurbeeld ien "''kouk''" en "''stain''". Woorden dij ien t Veenkelonioals nait zo bruukt worden, worden dit ien t Hoogelaandsters voak wel. Bieveurbeeld Veenkelonioalse woorden "eeuw", "vieren" en "moe" binnen ien t Hoogelaandsters "aiw", "vaaiern" of "vijern" en "mou(der)". Bie n enquête oet [[1991]] wuir deur maisten van ondervroagden t Hoogelaandsters aanwezen as t "beste" Grunnegs.
 
-== Toalaigenschoppen vant Hogelaandsters het n aantel aigenschoppen dij aander dialekten nait hebben. Zo as: ==
+== Toalaigenschoppen vant Hogelaandsters==
+
+t Hogelaandsters het n aantel aigenschoppen dij aander dialekten nait hebben, zo as:
 
 *t vertoalgedrag van t Hoogelaandsters groter as bieveurbeeld t Veenkelonioals. Ien de Veenkelonies zègt man 'eeuw' en 'beest', op t Hoogelaand zègt man 'aiw' en 'baist'. 
 *De oe wordt meer bruukt. Zo zègt man 'hoes", woar t Veenkelonioals, Noordvèlds, Stadjeders en Westerkertijers 'huus" bruken.
