--- a/Hoogelaandsters.mw
+++ b/Hoogelaandsters.mw
@@ -49,9 +49,9 @@ gain
 |n.v.t.
 |}
 
-t '''Hoogelaandsters''' (ook: Noordgrunnegs) is n [[Nedersaksisch]] dialekt dat proat wordt opt  [[Hoogelaand]], t noordelke dail van t provìnzie [[Grunnen (provìnzie)|Grunnen]]. t Toalgebied van t Hoogelaandsters wordt begrènzt deur stad [[Grunnen (stad)|Grunnen]] ien t zuden, t [[Rietdaip]] ien t zuudwesten, t [[Lauwersmeer]] ien t noordwesten, [[Waddenzee|t Wad]] ien t noorden, de [[Ems (revier)|Ems]] ien t noordoosten en t [[Damsterdaip]] ien t zuudoosten. De steden [[Delfziel]] en t [[Daam]], dij t aan t noordelke zied van t [[Damsterdaip]] liggen (opt [[Hoogelaand]] dus), heuren toalkundeg bie t [[Oldamtsters|Oldambtster]] dialektgebied.
+t '''Hoogelaandsters''' (ook: Noordgrunnegs) is n [[Nedersaksisch]] dialekt dat proat wordt opt  [[Hoogelaand]], t noordelke dail van t provìnzie [[Grunnen (provìnzie)|Grunnen]]. t Toalgebied van t Hoogelaandsters wordt begrènzt deur stad [[Grunnen (stad)|Grunnen]] ien t zuden, t [[Rietdaip]] ien t zuudwesten, t [[Lauwersmeer]] ien t noordwesten, [[Waddenzee|t Wad]] ien t noorden, de [[Ems (revier)|Ems]] ien t noordoosten en t [[Damsterdaip]] ien t zuudoosten. De steden [[Delfziel]] en t [[Daam]], dij t aan t noordelke zied van t [[Damsterdaip]] liggen (opt [[Hoogelaand]] dus), heuren toalkundeg bie t [[Oldambtsters|Oldambtster]] dialektgebied.
 
-t Hoogelaandsters wordt tegenswoordeg proat deur om en bie 55.000 minsken en is ain van dialekten die bie een bult minsken leeft van [[Grunnen (provìnzie)|Grunnen]]. Doch minsen die het proaten wordt stoaregaan minder, omreden dat maisten  oet oldern bestait.
+t Hoogelaandsters wordt tegenswoordeg proat deur om en bie 55.000 minsken en is ain van dialekten die bie een bult minsken leeft van [[Grunnen (provìnzie)|Grunnen]]. Doch minsen die het proaten wordt stoaregaan minder, omreden dat maisten oet oldern bestait.
 
 == t "Beste" Grunnegs==
 
