*Empty MediaWiki Message*

--- a/Jannes_Slot.mw
+++ b/Jannes_Slot.mw
@@ -4,7 +4,7 @@ Slot skreav [[Nederlaands|neaderlandske]] polityromans dee as altyd oaver Twente
 
 In syne gedichten, dee meyst eynvoldig in mekander steaket, düt Slot oaver saken dee em nå an et härte ligt. Nen mooien summerdag, synen souvöälsten trouwdag, nen morgen hen visken. Vake sint et meyr körte verhaalkes dee skynbår tovallig rymet. Heyl sekuur was Slot neet med den förm: mangs wesselt syne gedichten van ne AABB-struktuur når ABAB, vryen form en weaderümme. De meyste gedichten, seaker do as Slot wat ölder wör, sint noch wa melancholisk van toun.
 
-Wellicht upvallend is dat Slot neet strak vaste hölde an et entersk. Hee pasden syn woordgebruuk an når syn (vöärnamelik) ryssenske publik. Grouten invlood sal hebben eweasd dat Slot jåren in Ryssen ewarked hevt.  
+Wellicht upvallend is dat Slot neet strak vaste hölde an et entersk. Hee pasden syn woordgebruuk an når syn (vöärnamelik) ryssenske publik. Grouten invlood sal hebben eweasd dat Slot jåren in Ryssen ewarked hevt. In syn gedicht ''Aargernissen'' gebrukt hee selvs et enterske ''aargernis'' en et ryssenske ''oargernis'' döär mekander.
 
 ==Uutgaven==
 * Dichtbündel: ''Kleine dinge'' (198?)
