Wysigingen döär [[Special:Contributions/Saschaporsche|Saschaporsche]] ([[User talk:Saschaporsche|oaverleg]]) weaderümmedraid tot de lätste versy van [[User:Steinbach|Steinbach]]

--- a/Plaanken.mw
+++ b/Plaanken.mw
@@ -1,4 +1,4 @@
-[[Bestaand:Ohio planking.jpg|miniatuur|Plaanker]]
+[[Bestaand: Planken.jpg|thumb|right|250px|Plaankers]]
 '''Plaanken''' (van t [[Engels]]e ''planking''), mangs ook wal '''The Lying Down Game''' enuumd (t ''platligspel'') is ne rage woerbie luu zik op ongebroekelike pleatse plat op n boek legnt met de aarme strak langs t lief (as of ze in de hoolding stoat, mer dan vlak), en zik doarbie loatt fotograferen. De fotoos wordt dan op sosjale netwaarke zat. t Is ne wearldwiede [[rage]] wat is oawerweaid oet [[Australi'je (land)|Australië]]. 
 
 == Oorsproonk ==
