--- a/Nedersaksisch_G.mw
+++ b/Nedersaksisch_G.mw
@@ -234,7 +234,7 @@ Hier stoat woorden die of in 't '''Nedersaksisch mit G begunt''' oet 't [[Neders
 * [[Grönnegs]]: 
 **''gruinte(rij)''
 **''gruunte'' ([[Westerkertiers]])
-* [[Sallaans]]: ''gruunte''
+* [[Sallaans]]: ''gruunte (''vrogger ok ''bi'jkok'' ([[Oldlusen]])
 * [[Stellingwarfs]]: ''gruunte''
 * [[Tweants]]: 
 ** ''gruunte'', ''greunte'', ''greunvoor'', ''greunkos''
