--- a/Appelsien.mw
+++ b/Appelsien.mw
@@ -1,5 +1,6 @@
 [[Ofbeelding:OrangeBloss wb.jpg|thumb|250px|Appelsien mit blossem]]
 [[Ofbeelding:Citrus sinensis0.jpg|thumb|250px|Onriepe appelsienen]] 
+[[Bestaand:Oranges - whole-halved-segment.jpg|duum|Appelsienen]]
 n '''Appelsien''' is de [[vrucht]] dij aan [[appelsienenboom]] gruit en beheurt tou t geslaacht ''[[Citrus|Sitrus]]''.
 
 De appelsien wordt ien [[Nederlaand]] en [[Vlaanderen|Floandern]] voak ienvouerd oet [[Spanje]]. De appelsien verkleurt tiedens riepensprozes van gruin noar oraanje tou, môr sums worden de vruchten kunstmoateg oraanje kleurd. Bie bomen dij ien [[tropen]] gruien blift de vrucht gruin of gruingeel, ook as zie riep binnen. Dat komt deurdat man veur de oraanje kleur verlet het van kollere nachten, dij der nait binnen ien tropen. De kleur van de schil het gain ìnkelde ienvloud op smoak.
