--- a/Ulk.mw
+++ b/Ulk.mw
@@ -79,7 +79,8 @@ De ulk is [[endemie (biogeografie)|endemisch]] veur [[Europa (continent)|Europa]
 ** ''bulsing'' ([[Ommen (stad)|Ommen]])
 ** ''bulsink'' ([[Ommen (stad)|Ommen]] en [[Niej-Heeten]])
 ** ''bulsik'' ([[Ommen (stad)|Ommen]], [[Dalsen]], [[Asselt]], [[Kampen (Overiessel)|Kampen]], [[Windesheim]] en [[Wieje]])
-** ''bunzing'' ([[Zwolle]], [[Kampen (Overiessel)|Kampen]] en [[Dèventer]])
+** ''bunzing'' ([[Kampen (Overiessel)|Kampen]] en [[Dèventer]])
+**''bunzink'' ([[Zwolle]])
 * [[Tweants]]: ''ulk'' (dr is ok ne oetdrukking met n ulk: ''n Ulk oet n strik haaln'', wat zovölle beteeknt as noar t huusken goan vuur ne grote bosskop)
 |}
 
