--- a/Brevenbusse.mw
+++ b/Brevenbusse.mw
@@ -18,6 +18,8 @@ In of-elegen gebieden in de [[Verienigde Staoten van Amerika|VS]] ku-j brevenbus
 
 ==Nedersaksisch==
 *[[Grunnegs]]: ''klipgat'', ''braivenkaast(e)''
+*[[Sallaands]]: ''brievenbusse''
+**''brievenbusse, busse, loerkleppe'' ([[Zwolle]])
 *[[Drèents]]: ''brievenbusse'' (spreekt uut ''briemmbusse'')
 *[[Stellingwarfs]]: ''brievebusse''
 *[[Veluws]]: 
