--- a/Jeuden.mw
+++ b/Jeuden.mw
@@ -10,16 +10,16 @@ Sunds die tied hebt zie een bestaon ehad van oarmoede, discriminoatie, onderdrok
 == Zionisme ==
 In de negentiende ieuw hebt ok de Jeuden 'n veraandering undergao waordeur veulen heur minder as een volk en meer as een etnische of religieuze gemienschop binnen aandere volken zien gaon binnen. Dielnaome an alle aspekten van et maotschoppelik leven kon now toenemen.
 
-Wel is mit naeme vanuut Oost- en Midden-Europa, waor et [[antisemitisme]] et slimste was, een Joodse nationaole beweging ontstaon (et [[Zionisme]]), waordeur d'r een gruui kwam van de Joodse gemienschop in et doedertiedse [[Turkije|Ottomaonse]] en laetere [[Verienigd Keuninkriek|Britse]] mandaotgebied Palestina die uutaendelik leidde tot de stichting van de staot Israël.
+Wel is mit naeme vanuut Oost- en Midden-Europa, waor et [[antisemitisme]] et slimste was, een Jeudse nationaole beweging ontstaon (et [[Zionisme]]), waordeur d'r een gruui kwam van de Jeudse gemienschop in et doedertiedse [[Turkije|Ottomaonse]] en laetere [[Verienigd Keuninkriek|Britse]] mandaotgebied Palestina die uutaendelik leidde tot de stichting van de staot Israël.
 
 == Holocaust ==
-Veur de [[Twiede Wereldoorlog]] was et antal Joden wereldwied ongeveer 18 miljoen. Nao de [[holocaust]] weren daor nog ongeveer 12 miljoen van over.
+Veur de [[Twiede Wereldoorlog]] was et antal Jeuden wereldwied ongeveer 16,7 miljoen<ref name=":0">Vital Statistics: Jewish Population of the World. eraodpleegd op 4-1-2021 van[https://www.jewishvirtuallibrary.org/jewish-population-of-the-world]</ref>. Nao de [[holocaust]] weren daor nog ongeveer 11 miljoen van over. Zo'n 6 miljoen jeuden bint vermoord in de Twiede Wereldoorlog.<ref name=":0" />
 
-Now lopen de schattings van 13,0 tot 14,6 miljoen. Daorvan leven d'r zoe'n 6 miljoen in [[Noord-Amerika|Noord-Amerike]], goed 5 miljoen in Israël en nog mar 1,5 miljoen in Europa.
+Now lopen de schattings (2018) van 14,6 töt 17,8 miljoen.<ref>Dashefsky, Arnold; Della Pergola, Sergio; Sheskin, Ira, eds. (2018). [https://www.jewishdatabank.org/content/upload/bjdb/2018-World_Jewish_Population_(AJYB,_DellaPergola)_DB_Final.pdf World Jewish Population] (PDF) (Report). [[:en:Berman_Jewish_DataBank|Berman Jewish DataBank]]. eraodpleegd 22 June 2019.</ref> Daorvan leven d'r zoe'n 6 miljoen in [[Noord-Amerika|Noord-Amerike]], goed 7  miljoen in Israël en nog mar 1,5 miljoen in Europa waorvan 1 miljoen in de [[Europese Unie]].
 
-Tiedens de Twiede Wereldoorlog wodden zoe'n 101.800 Nederlaanse Joden en femilieleden vermoord. Et tal Nederlaanse Joden zol tegenwoordig op ongeveer 37.000 liggen.
+Tiedens de Twiede Wereldoorlog wodden zoe'n 101.800 Nederlaanse Jeuden en femilieleden vermoord. Et tal Nederlaanse Jeuden zol tegenwoordig op ongeveer 37.000 liggen.
 
-Hoe disse antallen in t [[Nedersaksies]] taelgebied liggen is ondudelik. Wel is zeker dat der daor ok een protte Joden ofvoerd binnen. Van de Joodse gemienschoppen in bi'jgelieks [[Grunnen (stad)|Grunningen]], [[Veendaam (dörp)|Veendam]] en [[Winschoten]] is niks meer over.
+Hoe disse antallen in t [[Nedersaksies]] taelgebied liggen is ondudelik. Wel is zeker dat der daor ok een protte Jeuden ofvoerd binnen. Van de Joodse gemienschoppen in bi'jgelieks [[Grunnen (stad)|Grunningen]], [[Veendaam (dörp)|Veendam]] en [[Winschoten]] is niks meer over.
 
 == Nedersaksies ==
 * [[Achterhooks]]: ''Jödde''
