*Empty MediaWiki Message*

--- a/Jeuden.mw
+++ b/Jeuden.mw
@@ -32,6 +32,7 @@ Hoe disse antallen in t [[Nedersaksies]] taelgebied liggen is ondudelik. Wel is 
 * [[Tweants]]: ''Jödde/Jörre''
 * [[Sallaands]]: ''Jeude''
 
+== Verwiezings ==
 [[Kategorie:Stellingwarfs artikel]]
 [[Kategorie:Kultuur]]
 [[Kategorie:Jeudendom]]
