--- a/Jeuden.mw
+++ b/Jeuden.mw
@@ -33,6 +33,8 @@ Hoe disse antallen in t [[Nedersaksies]] taelgebied liggen is ondudelik. Wel is 
 * [[Sallaands]]: ''Jeude''
 
 == Verwiezings ==
+<references />
+
 [[Kategorie:Stellingwarfs artikel]]
 [[Kategorie:Kultuur]]
 [[Kategorie:Jeudendom]]
