--- a/Brevenbusse.mw
+++ b/Brevenbusse.mw
@@ -22,6 +22,9 @@ In of-elegen gebieden in de [[Verienigde Staoten van Amerika|VS]] ku-j brevenbus
 **''brievenbusse, busse, loerkleppe'' ([[Zwolle]])
 *[[Drèents]]: ''brievenbusse'' (spreekt uut ''briemmbusse'')
 *[[Stellingwarfs]]: ''brievebusse''
+*Tweants: 
+**''glieve''
+**''brevenbusse''
 *[[Veluws]]: 
 **''breve{{small()|n}}bus{{small()|se}}''
 **''brieve{{small()|n}}bus{{small()|se}}'' 
