--- a/Twitter.mw
+++ b/Twitter.mw
@@ -23,7 +23,7 @@ In Neerlaand wör op [[22 november]] [[2009]] et woard Twitteren ekeuzen as Neer
 ==Oetbreadingen==
 Umdet wat leu neet genog harren an de basismeugelikheden van Twitter, zeent der verskeaidene oetbreadingen vuur oontwikkeld. Een zied-oonderdeel van Twitter was TwitPic (ne ofkörting is van ''Twitter Picture''). Met disse funksie ko'j fotoos op twitter zetten, of ze noar oew profiel steuren, zodet ze vanzelf op Twitter komt. Met det Twitter noa verloop van tied disse meugelikhead zelf toovoogn an de et standaard twitterpakket, was TwitPic neet mear neudig.
 
-De leste joaren zit Twitter in zwoar wear. Der komt neet völle nieje gebroekers mear bie en et jonge volk kiezet vuur aandere netwoarken as [[instagram]] en [[snapchat]]. Um toch interessant te bliewen, hef Twitter vanear ne stemmeugelikheid der bie edoan. Doarmet kan nen twitterder ne minipeiling hooldn. Ne aandere oetbreaiding is de toovoging van gif-ofbeeldingen, woermet as nen twitterder een bepoald geveul kan loatn zeen.
+De leste joaren zit Twitter in zwoar wear. Der komt neet völle nieje gebroekers mear bie en et jonge volk kös vuur aandere netwoarken as [[instagram]] en [[snapchat]]. Um toch interessant te bliewen, hef Twitter vanear ne stemmeugelikheid der bie edoan. Doarmet kan nen twitterder ne minipeiling hooldn. Ne aandere oetbreaiding is de toovoging van gif-ofbeeldingen, woermet as nen twitterder een bepoald geveul kan loatn zeen. Ook köant tweets rechtevoord inepland worden en an mekoar ekoppeld, zodat der nen twitterdroad ontsteet. Dat gef leu dee wat mear te vertellen hebt de kans um wat deper op de zaak in te goan en et in et geweld van de streum berichten van anderen toch bie mekoar te holden.
 
 == Oetgoande verbeendige ==
 * [http://www.twitter.com/ offisjele webstea]
