--- a/Jöädendom.mw
+++ b/Jöädendom.mw
@@ -1,14 +1,14 @@
-[[Bestaand:Menorah7a.png|thumb|250px|De menora is een symbool van et jöydendom en sol oorsprüngelik deal ewesd hebben van et de möäbels van de tempel van Salomo]]
-Et '''jöydendom''' is et gelöyv van et jöydske volk, et is eyne van de vrogst unståne godsdeensten dee mar eyne god earen doot. [[Monteitisme]] wörd so een godsdeenst enöömd. Vandage den dag besteyt et altyd noch en wörd et altyd noch beleaden, vöäral in Israël.
+[[Bestaand:Menorah7a.png|thumb|250px|De [[menora]] is een symbool van et jöydendom en sol oorsprüngelik deal ewesd hebben van et de möäbels van de [[tempel van Salomo]]]]
+Et '''jöydendom''' is et gelöyv van et [[Jeuden|jöydske]] volk, et is eyne van de vrogst unståne [[Religie|godsdeensten]] dee mar eyne god earen doot. [[Monotheïsme]] wörd so een godsdeenst enöömd. Vandage den dag besteyt et altyd noch en wörd et altyd noch beleaden, vöäral in [[Israël]].
 
-Et jöydendom kan neet makkelik in westerske hökkyns estoppet wörden so as religy, rasse, etniciteit of kultuur, dit ümdat jöyden oaver et jöydendom pråt in tarms van 4000 jår geskydenisse. Tydens disse lange tydpark hebbet jöyden slavernye, chaos, theokraty, verövering, besetting en ballingskap med emaked en bint sy in kontact ewesd en beïnvloded döär et olde Egypte, Babylonië, Perzië, et greekske hellinisme, eavenas moderne beweagingen so as de [[Verlichting]], et socialisme en de opkümts van et nationalisme.  Een heyle bülte künnet wy wal seggen.
+Et jöydendom kan neet makkelik in westerske hökkyns estoppet wörden so as religy, rasse, etniciteit of [[Cultuur|kultuur]], dit ümdat jöyden oaver et jöydendom pråt in tarms van 4000 jår geskydenisse. Tydens disse lange tydpark hebbet jöyden slavernye, chaos, theokraty, verövering, besetting en ballingskap med emaked en bint sy in kontact ewesd en beïnvloded döär et olde [[Olde Egypte|Egypte]], [[Babylonië]], [[Perzië]], et [[Olde Griekenlaand|greekske]] [[hellinisme]], eavenas moderne beweagingen so as de [[Verlichting]], et [[socialisme]] en de opkümts van et [[nationalisme]].  Een heyle bülte künnet wy wal seggen.
 
 Jeudse geschrifen en hun geschiedenisse is vake bruukt deur aand're luu as historische fundament, door bint aand're religies deur onstaone, zo as twi'je hele bekenden: Christendom en Islam.
 
-Jeuden hebt 't 'n paar boeken woor zi'j hun geleuf op ebasseert hebt (Torah), en zi'j bezit boeken die bint onstaone naor anlieding van disse Torah, later op eschree'm deur de zo enuumde profeten (Neviiem) en geschiedenisse vertellende de boeken (Chetoeviem). 't Totaalplaatie van disse boeken nuumt zi'j (Torah + Neviiem + CHetoeviem =) TeNaCH. Doornaos hebt zi'j nog de Talmoed, dit bint weer honderd en/of duuzenden joor oale opmarking' van oale rabbi's over de Torah. 
-De Torah bint de boeken die deur Mosje eschree'm, naor interpretatie van God. De Torah kump gedeeltelek overhen met de eerste vief biebelboeken van de christenen, allene de verchillen van interpretatie en vertaling tussen jeuden en christenen bint te groot um ze dichte bi'j mekare te zetten, zo wilt de mieste jeuden 't ok, zi'j zeg dat christenen niet met hun heilige boeken umgaot woor as zi'j veur beduult bint.
+Jeuden hebt 't 'n paar boeken woor zi'j hun geleuf op ebasseert hebt ([[Torah]]), en zi'j bezit boeken die bint onstaone naor anlieding van disse Torah, later op eschree'm deur de zo enuumde profeten ([[Neviiem]]) en geschiedenisse vertellende de boeken ([[Chetoeviem]]). 't Totaalplaatie van disse boeken nuumt zi'j (Torah + Neviiem + CHetoeviem =) TeNaCH. Doornaos hebt zi'j nog de [[Talmoed]], dit bint weer honderd en/of duuzenden joor oale opmarking' van oale rabbi's over de Torah. 
+De Torah bint de boeken die deur Mosje eschree'm, naor interpretatie van [[JHWH|God]]. De Torah kump gedeeltelek overhen met de eerste vief [[Biebel|biebelboeken]] van de [[christenen]], allene de verchillen van interpretatie en vertaling tussen jeuden en christenen bint te groot um ze dichte bi'j mekare te zetten, zo wilt de mieste [[jeuden]] 't ok, zi'j zeg dat christenen niet met hun heilige boeken umgaot woor as zi'j veur beduult bint.
 
-In dit artikel bruuk ik allene de Hebreeuwse naam' van de personages, en niet de vertaling van uut de christelikke biebel.
+In dit artikel bruuk ik allene de [[Hebreeuws|Hebreeuwse]] naam' van de personages, en niet de vertaling van uut de christelikke biebel.
 
 
 === De dartiene geleufs principes van Maimonides (RaMBaM) ===
