--- a/Jöädendom.mw
+++ b/Jöädendom.mw
@@ -1,7 +1,7 @@
 [[Bestaand:Menorah7a.png|thumb|250px|De [[menora]] is een symbool van et jöydendom en sol oorsprüngelik deal ewesd hebben van et de möäbels van de [[tempel van Salomo]]]]
 Et '''jöydendom''' is et gelöyv van et [[Jeuden|jöydske]] volk, et is eyne van de vrogst unståne [[Religie|godsdeensten]] dee mar eyne god earen doot. [[Monotheïsme]] wörd so een godsdeenst enöömd. Vandage den dag besteyt et altyd noch en wörd et altyd noch beleaden, vöäral in [[Israël]].
 
-Et jöydendom kan neet makkelik in westerske hökkyns estoppet wörden so as religy, rasse, etniciteit of [[Cultuur|kultuur]], dit ümdat jöyden oaver et jöydendom pråt in tarms van 4000 jår geskydenisse. Tydens disse lange tydpark hebbet jöyden slavernye, chaos, theokraty, verövering, besetting en ballingskap med emaked en bint sy in kontact ewesd en beïnvloded döär et olde [[Olde Egypte|Egypte]], [[Babylonië]], [[Perzië]], et [[Olde Griekenlaand|greekske]] [[hellinisme]], eavenas moderne beweagingen so as de [[Verlichting]], et [[socialisme]] en de opkümts van et [[nationalisme]].  Een heyle bülte künnet wy wal seggen.
+Et jöydendom kan neet makkelik in westerske hökkyns estoppet wörden so as [[Religie|religy]], [[rasse]], [[etniciteit]] of [[Cultuur|kultuur]], dit ümdat jöyden oaver et jöydendom pråt in tarms van 4000 jår [[geskydenisse]]. Tydens disse lange tydpark hebbet jöyden [[slavernye]], chaos, [[theokraty]], verövering, besetting en ballingskap med emaked en bint sy in kontact ewesd en beïnvloded döär et olde [[Olde Egypte|Egypte]], [[Babylonië]], [[Perzië]], et [[Olde Griekenlaand|greekske]] [[hellinisme]], eavenas moderne beweagingen so as de [[Verlichting]], et [[socialisme]] en de opkümts van et [[nationalisme]].  Een heyle bülte künnet wy wal seggen.
 
 Jeudse geschrifen en hun geschiedenisse is vake bruukt deur aand're luu as historische fundament, door bint aand're religies deur onstaone, zo as twi'je hele bekenden: Christendom en Islam.
 
