--- a/Jöädendom.mw
+++ b/Jöädendom.mw
@@ -3,14 +3,12 @@ Et '''jöydendom''' is et gelöyv van et [[Jeuden|jöydske]] volk, et is eyne va
 
 Et jöydendom kan neet makkelik in westerske hökkyns estoppet wörden so as [[Religie|religy]], [[rasse]], [[etniciteit]] of [[Cultuur|kultuur]], dit ümdat jöyden oaver et jöydendom pråt in tarms van 4000 jår [[geskydenisse]]. Tydens disse lange tydpark hebbet jöyden [[slavernye]], chaos, [[theokraty]], verövering, besetting en ballingskap med emaked en bint sy in kontact ewesd en beïnvloded döär et olde [[Olde Egypte|Egypte]], [[Babylonië]], [[Perzië]], et [[Olde Griekenlaand|greekske]] [[hellinisme]], eavenas moderne beweagingen so as de [[Verlichting]], et [[socialisme]] en de opkümts van et [[nationalisme]].  Een heyle bülte künnet wy wal seggen.
 
-Jeudse geschrifen en hun geschiedenisse is vake bruukt deur aand're luu as historische fundament, door bint aand're religies deur onstaone, zo as twi'je hele bekenden: Christendom en Islam.
+Jöydse geskriften en heur geskydenisse is vake brüükt döär aandere luu as historiske fundament, dår bint aandere religys döär onståne, zo as twey heyle bekenden: [[Christendom]] en [[Islam]].
 
-Jeuden hebt 't 'n paar boeken woor zi'j hun geleuf op ebasseert hebt ([[Torah]]), en zi'j bezit boeken die bint onstaone naor anlieding van disse Torah, later op eschree'm deur de zo enuumde profeten ([[Neviiem]]) en geschiedenisse vertellende de boeken ([[Chetoeviem]]). 't Totaalplaatie van disse boeken nuumt zi'j (Torah + Neviiem + CHetoeviem =) TeNaCH. Doornaos hebt zi'j nog de [[Talmoed]], dit bint weer honderd en/of duuzenden joor oale opmarking' van oale rabbi's over de Torah. 
-De Torah bint de boeken die deur Mosje eschree'm, naor interpretatie van [[JHWH|God]]. De Torah kump gedeeltelek overhen met de eerste vief [[Biebel|biebelboeken]] van de [[christenen]], allene de verchillen van interpretatie en vertaling tussen jeuden en christenen bint te groot um ze dichte bi'j mekare te zetten, zo wilt de mieste [[jeuden]] 't ok, zi'j zeg dat christenen niet met hun heilige boeken umgaot woor as zi'j veur beduult bint.
+Jöyden hebt 't 'n paar boken wår see heur gelööf op ebasseert hebt ([[Torah]]), en see bezit boken dee bint onståne når anlieding van disse Torah, later op eschreven döär de zo enöömde profeten ([[Neviiem]]) en geskydenisse vertellende de boken ([[Chetoeviem]]). 't Totaalplaatie van disse boken nöömt se (Torah + Neviiem + CHetoeviem =) TeNaCH. Dårnåst hebt se nog de [[Talmoed]], dit bint weyr honderd en/of düüsenden jår oalde opmarkings van oalde rabbi's oaver de Torah. 
+De Torah bint de boken dee döär Mosje eschreven, når interpretaty van [[JHWH|God]]. De Torah kümp gedeyltelik oaverhen met de eyrste vyf [[Biebel|bybelboken]] van de [[christenen]], allene de verskillen van interpretaty en vertaling tussen jöyden en christenen bint te grout üm ze dichte by mekare te setten, so wilt de meyste [[jeuden|jöyden]] 't ok, see segt dat christenen niet met hünne heilige boken ümgaot wår as zi'j veur bedoolt bint.
 
-In dit artikel bruuk ik allene de [[Hebreeuws|Hebreeuwse]] naam' van de personages, en niet de vertaling van uut de christelikke biebel.
-
-
+In dit artikel wördt allene de [[Hebreeuws|Hebreeuwse]] namen van de personages en neet de vertaling van üüt de christelike bybel gebrüükt.
 === De dartiene geleufs principes van Maimonides (RaMBaM) ===
 De dartiene blangriekse grondslegen van de jeudse godsdiens, zo as neer-ezet bint door codificator en godsdienst filesofe Maimonides (1135-1204). 
 Dizze wödt hier in 't kört weer-egeven an de haand van 't jeudse gebedsboek Siach Jitschak van 't Nederlaans-Israëlies Karkegenootschap:
