In Twente is et Jödden. Dat gevt an dat et in dit geval ne <öä> weasen mut.

--- a/Jöädendom.mw
+++ b/Jöädendom.mw
@@ -1,12 +1,12 @@
-[[Bestaand:Menorah7a.png|thumb|250px|De [[menora]] is een symbool van et jöydendom en sol oorsprüngelik deal ewesd hebben van et de möäbels van de [[tempel van Salomo]]]]
-Et '''jöydendom''' is et gelöyv van et [[Jeuden|jöydske]] volk, et is eyne van de vrogst unståne [[Religie|godsdeensten]] dee mar eyne god earen doot. [[Monotheïsme]] wörd so een godsdeenst enöömd. Vandage den dag besteyt et altyd noch en wörd et altyd noch beleaden, vöäral in [[Israël]].
+[[Bestaand:Menorah7a.png|thumb|250px|De [[menora]] is een symbool van et jöädendom en sol oorsprüngelik deal ewesd hebben van et de möäbels van de [[tempel van Salomo]]]]
+Et '''jöädendom''' is et gelöyv van et [[Jeuden|jöädske]] volk, et is eyne van de vrogst unståne [[Religie|godsdeensten]] dee mar eyne god earen doot. [[Monotheïsme]] wörd so een godsdeenst enöömd. Vandage den dag besteyt et altyd noch en wörd et altyd noch beleaden, vöäral in [[Israël]].
 
-Et jöydendom kan neet makkelik in westerske hökkyns estoppet wörden so as [[Religie|religy]], [[rasse]], [[etniciteit]] of [[Cultuur|kultuur]], dit ümdat jöyden oaver et jöydendom pråt in tarms van 4000 jår [[geskydenisse]]. Tydens disse lange tydpark hebbet jöyden [[slavernye]], chaos, [[theokraty]], verövering, besetting en ballingskap med emaked en bint sy in kontact ewesd en beïnvloded döär et olde [[Olde Egypte|Egypte]], [[Babylonië]], [[Perzië]], et [[Olde Griekenlaand|greekske]] [[hellinisme]], eavenas moderne beweagingen so as de [[Verlichting]], et [[socialisme]] en de opkümts van et [[nationalisme]].  Een heyle bülte künnet wy wal seggen.
+Et jöädendom kan neet makkelik in westerske hökkyns estoppet wörden so as [[Religie|religy]], [[rasse]], [[etniciteit]] of [[Cultuur|kultuur]], dit ümdat jöäden oaver et jöädendom pråt in tarms van 4000 jår [[geskydenisse]]. Tydens disse lange tydpark hebbet jöäden [[slavernye]], chaos, [[theokraty]], verövering, besetting en ballingskap med emaked en bint sy in kontact ewesd en beïnvloded döär et olde [[Olde Egypte|Egypte]], [[Babylonië]], [[Perzië]], et [[Olde Griekenlaand|greekske]] [[hellinisme]], eavenas moderne beweagingen so as de [[Verlichting]], et [[socialisme]] en de opkümts van et [[nationalisme]].  Een heyle bülte künnet wy wal seggen.
 
-Jöydse geskriften en heur geskydenisse is vake brüükt döär aandere luu as historiske fundament, dår bint aandere religys döär onståne, zo as twey heyle bekenden: [[Christendom]] en [[Islam]].
+jöädse geskriften en heur geskydenisse is vake brüükt döär aandere luu as historiske fundament, dår bint aandere religys döär onståne, zo as twey heyle bekenden: [[Christendom]] en [[Islam]].
 
-Jöyden hebt 't 'n paar boken wår see heur gelööf op ebasseert hebt ([[Torah]]), en see bezit boken dee bint onståne når anlieding van disse Torah, later op eschreven döär de zo enöömde profeten ([[Neviiem]]) en geskydenisse vertellende de boken ([[Chetoeviem]]). 't Totaalplaatie van disse boken nöömt se (Torah + Neviiem + CHetoeviem =) TeNaCH. Dårnåst hebt se nog de [[Talmoed]], dit bint weyr honderd en/of düüsenden jår oalde opmarkings van oalde rabbi's oaver de Torah. 
-De Torah bint de boken dee döär Mosje eschreven, når interpretaty van [[JHWH|God]]. De Torah kümp gedeyltelik oaverhen met de eyrste vyf [[Biebel|bybelboken]] van de [[christenen]], allene de verskillen van interpretaty en vertaling tussen jöyden en christenen bint te grout üm ze dichte by mekare te setten, so wilt de meyste [[jeuden|jöyden]] 't ok, see segt dat christenen niet met hünne heilige boken ümgaot wår as zi'j veur bedoolt bint.
+jöäden hebt 't 'n paar boken wår see heur gelööf op ebasseert hebt ([[Torah]]), en see bezit boken dee bint onståne når anlieding van disse Torah, later op eschreven döär de zo enöömde profeten ([[Neviiem]]) en geskydenisse vertellende de boken ([[Chetoeviem]]). 't Totaalplaatie van disse boken nöömt se (Torah + Neviiem + CHetoeviem =) TeNaCH. Dårnåst hebt se nog de [[Talmoed]], dit bint weyr honderd en/of düüsenden jår oalde opmarkings van oalde rabbi's oaver de Torah. 
+De Torah bint de boken dee döär Mosje eschreven, når interpretaty van [[JHWH|God]]. De Torah kümp gedeyltelik oaverhen met de eyrste vyf [[Biebel|bybelboken]] van de [[christenen]], allene de verskillen van interpretaty en vertaling tussen jöäden en christenen bint te grout üm ze dichte by mekare te setten, so wilt de meyste [[jeuden|jöäden]] 't ok, see segt dat christenen niet met hünne heilige boken ümgaot wår as zi'j veur bedoolt bint.
 
 In dit artikel wördt allene de [[Hebreeuws|Hebreeuwse]] namen van de personages en neet de vertaling van üüt de christelike bybel gebrüükt.
 === De dartiene geleufs principes van Maimonides (RaMBaM) ===
