NSS wat anepasd

--- a/Jöädendom.mw
+++ b/Jöädendom.mw
@@ -1,55 +1,55 @@
-[[Bestaand:Menorah7a.png|thumb|250px|De [[menora]] is een symbool van et jöädendom en sol oorsprüngelik deal ewesd hebben van et de möäbels van de [[tempel van Salomo]]]]
+[[Bestaand:Menorah7a.png|thumb|250px|De [[menora]] is een symbool van et jöädendom en sol oorsprüngelik deal eweasd hebben van de möäbels van de [[tempel van Salomo]]]]
 Et '''jöädendom''' is et gelöyv van et [[Jeuden|jöädske]] volk, et is eyne van de vrogst unståne [[Religie|godsdeensten]] dee mar eyne god earen doot. [[Monotheïsme]] wörd so een godsdeenst enöömd. Vandage den dag besteyt et altyd noch en wörd et altyd noch beleaden, vöäral in [[Israël]].
 
-Et jöädendom kan neet makkelik in westerske hökkyns estoppet wörden so as [[Religie|religy]], [[rasse]], [[etniciteit]] of [[Cultuur|kultuur]], dit ümdat jöäden oaver et jöädendom pråt in tarms van 4000 jår [[geskydenisse]]. Tydens disse lange tydpark hebbet jöäden [[slavernye]], chaos, [[theokraty]], verövering, besetting en ballingskap med emaked en bint sy in kontact ewesd en beïnvloded döär et olde [[Olde Egypte|Egypte]], [[Babylonië]], [[Perzië]], et [[Olde Griekenlaand|greekske]] [[hellinisme]], eavenas moderne beweagingen so as de [[Verlichting]], et [[socialisme]] en de opkümts van et [[nationalisme]].  Een heyle bülte künnet wy wal seggen.
+Et jöädendom kan neet makkelik in westerske hökkyns estoppet wörden sou as [[Religie|religy]], [[rasse]], [[etniciteit]] of [[Cultuur|kultuur]], dit ümdat jöäden oaver et jöädendom pråt in tarms van 4000 jår [[geskydenisse]]. Tydens dit lange tydpark hebbet jöäden [[slavernye]], chaos, [[theokraty]], verövering, besetting en ballingskap med emaked en bint sy in kontakt eweasd en beïnvloded döär et olde [[Olde Egypte|Egypte]], [[Babylonië]], [[Perzië]], et [[Olde Griekenlaand|greekske]] [[hellinisme]], eavenas moderne beweagingen sou as de [[Verlichting]], et [[socialisme]] en de opkümts van et [[nationalisme]].  Een heyle bülte künnet wy wal seggen.
 
 jöädse geskriften en heur geskydenisse is vake brüükt döär aandere luu as historiske fundament, dår bint aandere religys döär onståne, zo as twey heyle bekenden: [[Christendom]] en [[Islam]].
 
-jöäden hebt 't 'n paar boken wår see heur gelööf op ebasseert hebt ([[Torah]]), en see bezit boken dee bint onståne når anlieding van disse Torah, later op eschreven döär de zo enöömde profeten ([[Neviiem]]) en geskydenisse vertellende de boken ([[Chetoeviem]]). 't Totaalplaatie van disse boken nöömt se (Torah + Neviiem + CHetoeviem =) TeNaCH. Dårnåst hebt se nog de [[Talmoed]], dit bint weyr honderd en/of düüsenden jår oalde opmarkings van oalde rabbi's oaver de Torah. 
-De Torah bint de boken dee döär Mosje eschreven, når interpretaty van [[JHWH|God]]. De Torah kümp gedeyltelik oaverhen met de eyrste vyf [[Biebel|bybelboken]] van de [[christenen]], allene de verskillen van interpretaty en vertaling tussen jöäden en christenen bint te grout üm ze dichte by mekare te setten, so wilt de meyste [[jeuden|jöäden]] 't ok, see segt dat christenen niet met hünne heilige boken ümgaot wår as zi'j veur bedoolt bint.
+jöäden hebt 'n paar boken wår see heur gelöyv op baseert ([[Torah]]), en see besittet boken dee bint onståne når anlieding van disse Torah, later op eskreaven döär de zo enöömde profeten ([[Neviiem]]) en geskydenisse vertellende de boken ([[Chetoeviem]]). 't Totaalplaatie van disse boken nöömt se (Torah + Neviiem + CHetoeviem =) TeNaCH. Dårnåst hebbet se noch de [[Talmud]], dit bint weader hunderd of düüsenden jår oalde opmarkings van olde rabbi's oaver de Torah. 
+De Torah bint de boken dee döär Mosje esskreaven bint, når interpretaty van [[JHWH|God]]. De Torah kümt gedeyltelik oaverhen med de eyrste vyv [[Biebel|bybelboken]] van de [[christendom|christenen]]. Al bint de verskillen van interpretaty en vertaling tüsken jöäden en christenen te grout üm se dichte by mekare te setten. Sou willet de meyste [[jeuden|jöäden]] et ouk. See segget dat christenen neet med hünne heilige boken ümgåt wår as see vöär bedoold bint.
 
-In dit artikel wördt allene de [[Hebreeuws|Hebreeuwse]] namen van de personages en neet de vertaling van üüt de christelike bybel gebrüükt.
-=== De dartiene geleufs principes van Maimonides (RaMBaM) ===
-De dartiene blangriekse grondslegen van de jeudse godsdiens, zo as neer-ezet bint door codificator en godsdienst filesofe Maimonides (1135-1204). 
-Dizze wödt hier in 't kört weer-egeven an de haand van 't jeudse gebedsboek Siach Jitschak van 't Nederlaans-Israëlies Karkegenootschap:
+In dit artikel wördt allene de [[Hebreeuws|hebreywske]] namen van de personages en neet de vertaling van üüt de christelike bybel gebrüked.
 
-''Ik geleuve d'r völledig an,''
-1. det God de ienige schepper en leider is van al wat eschaopen is en töt staand kwam, kump en köm zol.
+=== De darteen gelöyvsprincipes van Maimonides (RaMBaM) ===
+De dartene belangrykse gründslägen van de jöädse godsdeenst, sou as dee neader-eset bint döär kodifikator en godsdeenstfilosofe Maimonides (1135-1204). 
+Disse wördet hyr in et kört weader-egeaven an de hande van et jöädske gebedsbook Siach Jitschak van et Neaderlandsk-Israelitisk Karkegenootskap:
 
-''Ik geleuve d'r völledig an,''
+''Ik gelöyve d'r vulleydig an,''
+1. dat God de eynige skepper en leider is van al wat eskåpen is en töt stand kwam, kümt en kummen sal.
+
+''Ik gelöyve d'r vulleydig an,''
 2. det God 'n absoluten ienheid is, onvergeliekelijk met wulke ienheid ok; det allene hi'j God is, die d'r waren, d'r is, en zol altied wèzen.
 
-''Ik geleuve d'r völledig an,''
+''Ik gelöyve d'r vulleydig an,''
 3. det hi'j gien lief hef, hi'j gien liefelijke functies bezit en det van 'm gien veurstelling meuglijk is.
 
-''Ik geleuve d'r völledig an,''
+''Ik gelöyve d'r vulleydig an,''
 4. det men allene töt 'm zien gebed mag richen en det men dit niet töt 'n aander magt doen.
 
-''Ik geleuve d'r völledig an,''
+''Ik gelöyve d'r vulleydig an,''
 5. det e de eerste en de leste is.
 
-''Ik geleuve d'r völledig an,''
+''Ik gelöyve d'r vulleydig an,''
 6. det al wat de profeten hebt ezegt waorheid is.
 
-''Ik geleuve d'r völledig an,''
+''Ik gelöyve d'r vulleydig an,''
 7. det Mosje de waore profeet was, die nooit zien weergao hef ehad of zol hem'.
 
-''Ik geleuve d'r völledig an,''
+''Ik gelöyve d'r vulleydig an,''
 8. det de hele Torah, zo as wi'j op 't moment hebt, dezölfen is wulke God an Mosje hef egeven.
 
-''Ik geleuve d'r völledig an,''
+''Ik gelöyve d'r vulleydig an,''
 9. det dizze Torah nie te veraanderen is, det d'r gien aandre bestiet, die van God ofkömsig is.
 
-''Ik geleuve d'r völledig an,''
+''Ik gelöyve d'r vulleydig an,''
 10. det God de haandelingen en de gedachen van alle mèènsen kent.
 
-''Ik geleuve d'r völledig an,''
+''Ik gelöyve d'r vulleydig an,''
 11. det e beloont wie zien gebeuden naokump, en straft wie zien geboden overtredt.
 
-''Ik geleuve d'r völledig an,''
+''Ik gelöyve d'r vulleydig an,''
 12. det de mosjiach zeker zol köm en al kan e lange vöt blieven, ik verwachte iedere dag zien köms.
-
-''Ik geleuve d'r völledig an,''
+''Ik gelöyve d'r vulleydig an,''
 13. det d'r iene opstaanding van de dojen zol wèzen op 'n tied det de schepper, wiens name prezen is en wiens faam zo hoge en veur altied verheven is, 't wille.
 
 {{Dialekt|sdz}}
