*Empty MediaWiki Message*

--- a/Jöädendom.mw
+++ b/Jöädendom.mw
@@ -1,5 +1,5 @@
 [[Bestaand:Menorah7a.png|thumb|250px|De [[menora]] is een symbool van et jöädendom en sol oorsprüngelik deal eweasd hebben van de möäbels van de [[tempel van Salomo]]]]
-Et '''jöädendom''' is et gelöyv van et [[Jeuden|jöädske]] volk, et is eyne van de vrogst unståne [[Religie|godsdeensten]] dee mar eyne god earen doot. [[Monotheïsme]] wörd so een godsdeenst enöömd. Vandage den dag besteyt et altyd noch en wörd et altyd noch beleaden, vöäral in [[Israël]].
+Et '''jöädendom''' is et gelöyv van et [[Jeuden|jöädske]] volk, et is eyne van de vrogst unståne [[Religie|godsdeensten]] dee mar eyne god earen doot. [[Monotheïsme]] wördt sou een godsdeenst enöömd. Vandage den dag besteyt et altyd noch en wörd et altyd noch beleaden, vöäral in [[Israël]].
 
 Et jöädendom kan neet makkelik in westerske hökkyns estopped wörden sou as [[Religie|religy]], [[rasse]], [[etniciteit]] of [[Cultuur|kultuur]], ümdat jöäden oaver et jöädendom pråt med 4000 jår [[geskydenisse]] in et achterhöyvd. Gedürende dit tydpark hebbet jöäden [[slavernye]], chaos, [[theokraty]], verövering, besetting en ballingskap medemaked en bint see in kontakt eweasd en beïnvloded döär et olde [[Olde Egypte|Egypte]], [[Babylonie]], [[Persie]], et [[Olde Griekenlaand|greekske]] [[hellinisme]], eavenas moderne beweagingen sou as de [[Verlichting]], et [[socialisme]] en de opkümst van et [[nationalisme]].
 
