--- a/Gebroeders_Brouwer.mw
+++ b/Gebroeders_Brouwer.mw
@@ -1,3 +1,4 @@
+[[Bild:GebroedersBrouwer.jpg|thumb|Gebroeders Brouwer]]
 De '''gebroeders Brouwer''' (Henk en Rende Brouwer) waren een succesvol [[Nederlaand|Nederlans]] trompetduo. Zie wieren ontdekt deur [[Pierre Kartner]]. Heur grootste successen hadden zie veural in de jaoren zeuventig. Toe traoden zie onder aandere op in 't [[tillevisie]]pregramma ''Op volle toeren''.
 
 De breurs greuiden op in 't Veluwse darp [[Hierden]]. Henk Brouwer woende veule jaoren, totdat e uut de tied kwam, in [[Vierhouten]].
